[package]
name = "exporter_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4"
prometheus_exporter = "0.8.5"
rand = "0.8.5"
reqwest = {version = "0.11", features = ["blocking"]}
